Fixes logo sizing and header sizes on mobile

--- a/client/stylesheets/about.import.styl
+++ b/client/stylesheets/about.import.styl
@@ -106,8 +106,9 @@
   .about-intro
     h1
       font-size 35px
-      changeBGSize(350px,243px)
+      changeBGSize(250px,173px)
     p
       width 100%
       text-align center
+      padding-top 15px
     
