--- a/client/stylesheets/globals.import.styl
+++ b/client/stylesheets/globals.import.styl
@@ -194,3 +194,24 @@ for num in 2 3 4 5 6
     right -5px
     color d-gray
     font-size 22px
+  h1
+    font-size 40px
+
+  h2
+    font-size 30px
+
+  h2.section-title
+    font-size 34px
+
+  h3
+    font-size 18px
+
+  h4
+    color body-text
+    font-weight 600
+    font-size 15px
+
+  h5
+    font-size 100%
+    font-weight 600
+    color d-gray  
